Cleaning up challenge page, and adding practice problem into header.

--- a/app/views/modals/_report_issue.html.haml
+++ b/app/views/modals/_report_issue.html.haml
@@ -1,4 +1,4 @@
-- if @task
+- if @task && current_user
   %div#report_issue_modal.dropdown_modal.modal.hide.fade{tabindex: "-1", style: "margin-left: -22%;"}
     %div.explorecontainer{ style: "width: 544px; background:none; border:none;" }
       :javascript
