--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -2,8 +2,8 @@
   = render "modals/report_issue"
   %div.quizspace
     :javascript
-      continue_countdown = true;
-      count_down_bar_width = 100;
+      var continue_countdown = true;
+      var count_down_bar_width = 100;
       $(document).ready(function(){
         $count_down_bar = $(".pointbarfiller");
         $count_down_points = $count_down_bar.parent().find("div.pointbartext");
@@ -18,30 +18,32 @@
       
       #{"$(document).ready(start_countdown);" if params[:action] == "continue" }
       
-      $(".answer_content").click(function(){
-        continue_countdown = false;
-        $(this).find("input").attr("checked", "checked");
-        $("#challenge_form").submit();
-      });
+      $(document).ready(function(){
+        $(".answer_content").click(function(){
+          continue_countdown = false;
+          $(this).find("input").attr("checked", "checked");
+          $("#challenge_form").submit();
+        });
       
-      $("#challenge_form").on("ajax:success", function(xhr, data){
-        $("#answer_"+data.correct_answer).css("background-color", "rgba(104, 231, 104, 0.79)").css("color", "white");
-        if(data.correct_answer != data.supplied_answer){
-          $("#answer_"+data.supplied_answer).css("background-color", "#FF9999").css("color", "white");
-        }$("#nextbutton").show();
-      });
+        $("#challenge_form").on("ajax:success", function(xhr, data){
+          $("#answer_"+data.correct_answer).css("background-color", "rgba(104, 231, 104, 0.79)").css("color", "white");
+          if(data.correct_answer != data.supplied_answer){
+            $("#answer_"+data.supplied_answer).css("background-color", "#FF9999").css("color", "white");
+          }$("#nextbutton").show();
+        });
       
-      $("#nextbutton").click(function(){
-        $(this).addClass("disabled").attr("disabled", "disabled");
-      });
+        $("#nextbutton").click(function(){
+          $(this).addClass("disabled").attr("disabled", "disabled");
+        });
     
-      $("#nextbutton").on("ajax:success", function(xhr, data){
-        $(".quizcontainer").fadeOut('slow', function(){
-          if(data.status == "reload"){
-            window.location.reload(true);
-          } else {
-            $(this).replaceWith(data).fadeIn();
-          }
+        $("#nextbutton").on("ajax:success", function(xhr, data){
+          $(".quizcontainer").fadeOut('slow', function(){
+            if(data.status == "reload"){
+              window.location.reload(true);
+            } else {
+              $(this).replaceWith(data).fadeIn();
+            }
+          });
         });
       });
      
@@ -69,7 +71,10 @@
               %li.answer_content{ id: "answer_#{a.id}", onclick: "$(this).css('background-color', '#C6C6DA');" }
                 = radio_button_tag :answer, a.id, false, style: "display: none;"
                 %span= a.content
-        = link_to "Next", continue_section_path(@section.id, @question_count), id: "nextbutton", style: "display: none; float: right;", remote: true, class: "button button-actionable", method: "post" 
+        - if current_user
+          = link_to "Next", continue_section_path(@section.id, @question_count), id: "nextbutton", style: "display: none; float: right;", remote: true, class: "button button-actionable", method: "post" 
+        - else
+          %a#nextbutton.login_link.button.button-actionable{ style: "float: right; display: none" } Continue
     %div{ style: "display:inline-block; vertical-align:top;" }
       %div.pointsandstreakspace
         %div.pointspace.counterbox
