--- a/app/views/modals/_login.html.haml
+++ b/app/views/modals/_login.html.haml
@@ -12,7 +12,7 @@
       %hr{ style: "margin: 0;" }
       
       .explorebody{ style: "min-height: 235px; text-align: center;" }
-        %p{ style: "padding: 10px; font-size: 14px;" } We believe that everyone has the right to be recognized for their knowledge and skills. From accordion playing to zoology, compete with others, and grow together.
+        %p{ style: "padding: 10px; font-size: 14px;" } We believe that everyone has the right to be recognized for their knowledge and skills, not just what fits neatly on a resume.
         
         %div
           = link_to "/auth/google_oauth2", class: "btn danger", style: "width:205px;" do
