Fixing the arena session limit.

--- a/app/views/sections/continue.html.haml
+++ b/app/views/sections/continue.html.haml
@@ -33,7 +33,7 @@
                 = radio_button_tag :answer, a.id, false, style: "display: none;"
                 %span= a.content
         - if current_user
-          = link_to "Next", start_section_path(@section.id), id: "nextbutton", class: "hide button button-actionable", onclick: '$(this).addClass("disabled").attr("disabled", "disabled");'
+          = link_to "Next", continue_section_path(@section.id, @question_count), id: "nextbutton", class: "hide button button-actionable", onclick: '$(this).addClass("disabled").attr("disabled", "disabled");'
         - else
           %a#nextbutton.login_link.button.button-actionable.hide Continue
     %div{ style: "display:inline-block; vertical-align:top;" }
