--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -8,7 +8,7 @@
         %h1 Looks like you're new here...
       .body
         %h4 MetaBright is the place to prove and showcase your skills. Poke around for a bit and try a practice problem to get started.
-        %a#practice_button.button.button-actionable{ onclick: "$('.quizcontainer').slideDown(); $.MB.init_arena();" } Take Practice Problem
+        %a#practice_button.button.button-actionable{ onclick: "$('.quizcontainer').slideDown(); $.MB.Arena.init();" } Take Practice Problem
         
         - @enrollment = @path.enrollments.new
         - @section = @path.sections.first
