--- a/app/views/sections/continue.html.haml
+++ b/app/views/sections/continue.html.haml
@@ -4,7 +4,7 @@
     - if params[:action] == "continue"
       :javascript
         $(function(){
-          $.MB.init_arena();
+          $.MB.Arena.init();
           $(".quizcontainer").fadeIn();
         });
      
