--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -133,7 +133,7 @@
     }
     .body { margin: 20px auto; }
     .exit {
-      float: right; margin-top: 5px;
+      float: right; margin-top: 5px; text-decoration: none;
       a { font-size: 15px; }
     }
   }
