--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -8,7 +8,7 @@
         %h1 Looks like you're new here...
       .body
         - @enrollment = @path.enrollments.new
-        - @section = @path.sections.where(is_published: true).first
+        - @section = @path.sections.where("published_at is not ?", nil).first
         - if @section && @task = @section.core_tasks.first
           - @answers = @task.answers
           - @question_count = 0
@@ -18,8 +18,8 @@
           MetaBright is the place to prove and showcase your skills. 
           - if @task
             Poke around for a bit and try a practice problem.
-            %a#practice_button.button.button-actionable{ onclick: "$('.quizcontainer').slideDown(); $.MB.Arena.init();" } Take Practice Problem
-            = render file: "sections/continue"
+        %a#practice_button.button.button-actionable{ onclick: "$('.quizcontainer').slideDown(); $.MB.Arena.init();" } Take Practice Problem
+        = render file: "sections/continue"
   
   .top
     = link_to challenge_path(@path.permalink), class: "home" do
