--- a/app/views/modals/_launchpad.html.haml
+++ b/app/views/modals/_launchpad.html.haml
@@ -11,13 +11,17 @@
         %span{style:"font-size:14px;"} #{@enrollment.points_to_next_level} pts to level up
         %div.progress.progress-success.progress-striped{style:"height:10px; margin-bottom:0;"}
           %div.bar{style:"width: #{@enrollment.level_percent}%;" }
-          
+    - if current_user.email.include?("@metabright.com")
+      - headlines = true
+      = render "modals/headlines/welcome"
     - if @achievements[:level] or @achievements[:rank]
+      - headlines = true
       = render "modals/headlines/achievements"
     - if @achievements[:contribution]
+      - headlines = true
       = render "modals/headlines/contribution"
     
-    %div.launchpadcontent{ style: ("display: none;" if @achievements[:level] or @achievements[:rank] or @achievements[:contribution]) }
+    %div.launchpadcontent{ style: ("display: none;" if headlines) }
       %div.launchpadsectioncolumn
         %h3
           Sections
