Adding social merge into blank account, and error checking on email option.

--- a/app/assets/stylesheets/challenge.css.scss
+++ b/app/assets/stylesheets/challenge.css.scss
@@ -19,8 +19,7 @@
       
       h4 { text-align: left; }
       a { margin-top:14px; }
-      .quizcontainer { display: none; margin-top: 20px; text-align: left; }
-      
+      .quizcontainer { margin-top: 20px; text-align: left; }
     }
   }
   
