--- a/app/assets/stylesheets/origin.css.scss
+++ b/app/assets/stylesheets/origin.css.scss
@@ -1,36 +1,76 @@
 #origin{
   text-align: center;
+  
+  .hero {
+    padding-top:16px;
+    margin: 80px auto 30px auto;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 6px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding-bottom:10px;
+    width: 600px;
+    
+    img { width:550px; }
+    h2 { font-size: 28px;}
+  }
+  
+  h3{
+    font-size: 18px;
+    text-align: left;
+    border-bottom: 1px solid rgba(0,0,0, .1);
+    margin-left: 20px;
+    line-height: 23px;
+    width: 560px;
+    margin-bottom: 11px;
+  }
+      
+  .container {
+    margin: 0 auto 0 auto;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 600px;
+    border-radius: 6px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background: rgba(255, 255, 255, 0.8);
+    overflow: hidden;
+    
+    .body{
+      padding-top:9px;
+      
+      .header{
+        padding: 7px 0 5px 9px;
+        margin: 0px;
+        background-color: #F9F9F9;
+        text-align:l eft;
+        
+        h1 {
+          font-size: 35px;
+          color: #404040;
+          display: inline-block;
+        }
+      }
+    }
+  } 
 
   table {
-    margin: 65px auto 0 auto;
-    width: 1000px; 
-    height: 600px;
+    margin-bottom: -6px; 
+    
     tr.logo{
       height: 150px;
       margin: 0 auto 0 auto;
       text-align: center;
-      .hero {
-        margin: 0 auto 0 auto;
-        text-align: center;
-        background-color: rgba(255, 255, 255, 0.8);
-        border-radius: 8px;
-        padding: 0 30px 30px 30px;
-        width: 600px;
-        img { height: 180px; margin: -30px 0 0 0; }
-        h2 { font-size: 35px; margin: -20px 0 0 0; }
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;
-      }
+      
     }
-    tr.tiles { 
-      height: 250px;
+    tr.tiles {
       td {
-        width: 250px;
-        padding: 5px;
+        width:154px;
+        padding: 5px 5px 25px 5px;
         margin: 5px;
         
         img { 
-          height: 225px; 
-          width: 225px; 
+          height: 110px; 
+          width: 110px; 
           box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;
           border-radius:8px;
           background-color: white;
