making start look good with origin

--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -1,7 +1,7 @@
 .intro_wrapper.hide.fadein
   .intro
     .header
-      = image_tag STONEY_MEDIUM_URL, style: "width:42px; height:47px; margin:4px 4px 0 0;", alt: "Stoney"
+      = image_tag STONEY_MEDIUM_URL, alt: "Stoney"
       %h1 Welcome to MetaBright!
     %hr{ style:"margin:0" }
     .body
