--- a/app/views/sections/intro.html.haml
+++ b/app/views/sections/intro.html.haml
@@ -1,7 +1,8 @@
 .intro_wrapper
   .intro
     .header
-      %h2 You're about to start your first Challenge!
+      = image_tag STONEY_MEDIUM_URL, style: "width:42px; height:47px; margin:4px 4px 0 0;", alt: "Stoney"
+      %h1 You're about to start your first Challenge!
     %hr{ style:"margin:0"}
     .body
       %ul
