--- a/app/views/modals/headlines/_welcome.html.haml
+++ b/app/views/modals/headlines/_welcome.html.haml
@@ -21,11 +21,11 @@
     })
   .header
     = image_tag STONEY_SMALL_URL, style: "display: inline-block; height:auto;", alt: "Stoney"
-    %h1{ style: "font-size: 35px; padding-top: 8px;"} Welcome to MetaBright!              
+    %h1{ style: "font-size: 35px; padding-top: 15px;"} Welcome to MetaBright!              
     %h2{ style: "font-size: 20px;"  }
       Add your high score to the leaderboard and keep racking up points!
       
-  .body{ style: "text-align: center; margin-top: 40px;" }
+  .body{ style: "text-align: center; margin-top: 30px;" }
     %div{ style: "text-align: center; "}
       = link_to "/auth/google_oauth2", class: "btn danger", style: "width:205px; padding-top:7px; padding-bottom:7px; margin-right: 30px;" do
         %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+google.png", alt: "Google" }
@@ -33,9 +33,11 @@
       = link_to "/auth/facebook", class: "btn danger", style: "width:205px; padding-top:7px; padding-bottom:7px;" do
         %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+facebook.png", alt: "Facebook" }
         %span.landingbuttontext Sign in with Facebook »
-      %hr
+      %div{ style: "background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/divider.png);background-repeat: no-repeat;background-position: center 10px;width: 374px;margin: 15px auto;"} OR
       = form_for(current_user, remote: true, html: { id: "update_name" }) do |f|
-        = f.text_field :email, value: nil, placeholder: "Or enter email or username...", style: "padding: 15px; font-size: 22px; width: 400px; text-align: center;"
+        = f.text_field :name, value: nil, placeholder: "Name", style: "padding: 3px; font-size: 14px; width: 180px; text-align: left;"
+        = f.text_field :email, value: nil, placeholder: "E-Mail", style: "padding: 3px; font-size: 14px; width: 180px; text-align: left; margin-right:5px; margin-left:5px;"
+        = f.text_field :password, value: nil, placeholder: "Password", style: "padding: 3px; font-size: 14px; width: 180px; text-align: left;"
   
   .exit{ style: "float: right; margin-top: 24px;" }
     %a{ onclick: "$(this).parents('.headlines').fadeOut(300, function(){ $(this).remove(); if($('.headlines').size() > 0){ $('.headlines:first').show() } else { $('.launchpadcontent').show(); } });" } Continue to Launchpad »
