--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -1,4 +1,8 @@
-.launchpad { 
+.launchpad {
+  $divider: "https://s3.amazonaws.com/moonlite-nsdub/static/divider.png";
+  $error_color: #971D1C;
+  $success_color: #62c462;
+   
   width:880px; 
   min-height:545px; 
   margin: 0px auto; 
@@ -12,11 +16,6 @@
   h1 { font: bold 23px 'MuliRegular', sans-serif; margin:0px; width:868px; padding:0px; }
   h1>img { border-radius:4px; height:36px; width:36px; }
   h1>div { position:relative; bottom:8px; display:inline;}
-  
-  .headlines .editor_view legend { display: none; }
-  .headlines input.error { border-color: #971D1C; }
-  .headlines input.successful { border-color: #62c462; color: #62c462 }
-  .headlines p.error { color: #971D1C; }
   
   .editor_view {
     .radio { padding-left:35px; height:100%; }
@@ -134,7 +133,29 @@
       h1 { font-size: 45px; font-weight: normal; width: inherit; }
       h2 { font-size: 23px; line-height: 25px; }
     }
-    .body { margin: 20px auto; }
+    .body { 
+      margin: 20px auto; 
+      .editor_view legend { display: none; }
+      input.error { border-color: $error_color; }
+      input.successful { border-color: $success_color; color: $success_color }
+      p.error { color: $error_color; }
+      
+      .signup {
+        text-align: center;
+        .btn.danger { width:205px; padding-top:7px; padding-bottom:7px; }
+        .btn.danger:first-child { margin-right: 30px; }
+        .btn.danger img { height:30px; }
+        .divider {
+          background-image: url($divider);
+          background-repeat: no-repeat;
+          background-position: center 10px;
+          width: 374px;
+          margin: 15px auto;
+        }
+        input { padding: 3px; font-size: 14px; width: 180px; text-align: left; }
+        input:nth-child(3) { margin-right:5px; margin-left:5px; }
+      }
+    }
     .exit {
       float: right; margin-top: 5px; text-decoration: none;
       a { font-size: 15px; }
