--- a/app/views/pages/origin.html.haml
+++ b/app/views/pages/origin.html.haml
@@ -23,7 +23,7 @@
             - first_section = path.try { |p| p.sections.first }
             - if path && first_section
               %td
-                = link_to start_section_path(path.sections.first), rel: "nofolow", remote: true do
+                = link_to start_section_path(path.sections.first), title: "#{path.name}", rel: "nofolow", remote: true do
                   = image_tag path.picture
         %tr.tiles
           - (4..8).each do |i|
@@ -31,6 +31,6 @@
             - first_section = path.try { |p| p.sections.first }
             - if path && first_section
               %td
-                = link_to start_section_path(path.sections.first), rel: "nofolow", remote: true do
+                = link_to start_section_path(path.sections.first), title: "#{path.name}", rel: "nofolow", remote: true do
                   = image_tag path.picture            
                    
